fixed comment template and scrollbar

--- a/laravel/public/styles.css
+++ b/laravel/public/styles.css
@@ -158,7 +158,3 @@
     border-color: var(--bg-green-body);
 }
 
-
-::-webkit-scrollbar {
-    display: none;
-}
